# OpenAudioLiveSystem

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  README.md
.github/workflows/: ci.yaml  ci.yml
coreui/: CMakeLists.txt  main.cpp
coreui/core/: AudioRouterQt.cpp  AudioRouterQt.h  DSPManager.cpp  DSPManager.h  ElemControlData.cpp  ElemControlData.h  NetworkConfig.h  PipeDesc.cpp  PipeDesc.h  PipeElemAudioIn.h  PipeElemHPF.cpp  PipeElemHPF.h  PipeElemLPF.cpp  PipeElemLPF.h  ShowManager.cpp  ShowManager.h
coreui/pipes/: PipeElemAudioIn.cpp  PipeElemAudioIn.h  PipeElemAudioInMtx.cpp  PipeElemAudioInMtx.h  PipeElemHPF.cpp  PipeElemHPF.h  PipeElemLPF.cpp  PipeElemLPF.h  PipeElemNoEdit.cpp  PipeElemNoEdit.h  PipeElemOutMtx.cpp  PipeElemOutMtx.h  PipeElemSendMtx.cpp  PipeElemSendMtx.h
coreui/pipes/ui/: FaderSendMtx.cpp  FaderSendMtx.h  FaderSendMtx.ui  FilterEditBase.cpp  FilterEditBase.h  FilterEditBase.ui  FilterVizHPF.cpp  FilterVizHPF.h  FilterVizLPF.cpp  FilterVizLPF.h  GainTrimUI.cpp  GainTrimUI.h  GainTrimUI.ui
coreui/surface_config/: pipes.json  surface.json
coreui/ui/: Fader.cpp  Fader.h  Fader.ui  PipeVisualizer.cpp  PipeVisualizer.h  PipeVisualizer.ui  RoutingPage.cpp  RoutingPage.h  SetupWindow.cpp  SetupWindow.h  SetupWindow.ui  SignalWindow.cpp  SignalWindow.h  SignalWindow.ui  SignalsWindow.cpp  SignalsWindow.h  VizUtils.cpp  VizUtils.h
debugger/: CMakeLists.txt  DebuggerWindow.cpp  DebuggerWindow.h  DebuggerWindow.ui  main.cpp
engine/: AudioEngine.cpp  AudioEngine.h  CMakeLists.txt  NetMan.cpp  NetMan.h  SampleStream.cpp  SampleStream.h  log.h  main.cpp  modules.cpp  modules.h  routing_routines.cpp  routing_routines.h
engine/piping/: AudioPipe.cpp  AudioPipe.h  AudioPlumber.cpp  AudioPlumber.h  PipeDescriptor.h  PipeWrapper.cpp  PipeWrapper.h
engine/piping/feedback/: LevelMeasurePipe.cpp  LevelMeasurePipe.h
engine/piping/filtering/: FiltHPFPipe.cpp  FiltHPFPipe.h  FiltLPFPipe.cpp  FiltLPFPipe.h
engine/piping/io/: AudioDirectOut.cpp  AudioDirectOut.h  AudioInMtx.cpp  AudioInMtx.h  AudioInPipe.cpp  AudioInPipe.h  AudioOutDirect.cpp  AudioOutDirect.h  AudioOutMtx.cpp  AudioOutMtx.h  AudioSendMtx.cpp  AudioSendMtx.h
io_sim/: CMakeLists.txt  io_sim.example.json  main.cpp
plugins/: CMakeLists.txt
plugins/builtin/: CMakeLists.txt
plugins/builtin/core_comp/: CMakeLists.txt  CompControl.cpp  CompControl.h  CompControl.ui  CompParams.h  CompViz.cpp  CompViz.h  CoreCompElem.cpp  CoreCompElem.h  CoreCompPipe.cpp  CoreCompPipe.h  CoreComp_UI.cpp  CoreComp_UI.h  core_comp.cpp  core_comp.h
plugins/builtin/core_eq/: CMakeLists.txt  CoreEQ_UI.cpp  CoreEQ_UI.h  CoreEqControlUI.cpp  CoreEqControlUI.h  CoreEqElem.cpp  CoreEqElem.h  CoreEqPipe.cpp  CoreEqPipe.h  FilterControl.cpp  FilterControl.h  FilterControl.ui  common.h  core_eq.cpp  core_eq.h
plugins/loader/: AudioPipe.cpp  AudioPipe.h  CMakeLists.txt  ElemControlData.cpp  ElemControlData.h  PipeDesc.cpp  PipeDesc.h  PluginInterface.cpp  PluginInterface.h  PluginLoader.cpp  PluginLoader.h
plugins/loader/ui/: FilterEditBase.cpp  FilterEditBase.h  GenericVizHandle.h  VizUtils.cpp  VizUtils.h  theme.h
scripts/: dev-up.sh
tools/oaninspect/: CMakeLists.txt  Decoder.cpp  Decoder.h  Filter.cpp  Filter.h  main.cpp
tools/sim_switch/: CMakeLists.txt  DiscoveryPeek.cpp  DiscoveryPeek.h  Switch.cpp  Switch.h  Tui.cpp  Tui.h  main.cpp  sim_proto.h
tools/sim_switch/test/: test_sim_switch.cpp
